# ashare-alpha-lab

./: .gitignore  plan.md  pyproject.toml  requirements.txt
config/: backtest.yaml  cost.yaml  data.yaml  strategy.yaml
scripts/: 01_download_data.py  02_build_panel.py  03_calc_factors.py  04_generate_signals.py  05_run_backtest.py  06_make_report.py  07_run_weight_experiments.py
src/ashare_alpha/: __init__.py  logger.py  settings.py
src/ashare_alpha/analysis/: attribution.py  factor_decay.py  factor_group.py  factor_ic.py  factor_report.py  metrics.py  risk.py  weight_experiments.py
src/ashare_alpha/backtest/: account.py  broker.py  cost.py  engine.py  execution.py  recorder.py
src/ashare_alpha/data/: akshare_downloader.py  asof.py  calendar.py  downloader.py  loader.py  preprocess.py  schema.py  tushare_client.py
src/ashare_alpha/factors/: composite.py  growth.py  momentum.py  quality.py  transform.py  value.py  volatility.py
src/ashare_alpha/strategy/: constraints.py  portfolio.py  signal.py  universe.py
src/ashare_alpha/visualize/: plot_drawdown.py  plot_exposure.py  plot_nav.py  plot_returns.py  report.py
tests/: test_asof.py  test_constraints.py  test_execution.py  test_factor_diagnostics.py  test_factors.py  test_metrics.py  test_universe.py  test_weight_experiments.py
