[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ashare-alpha"
version = "0.1.0"
description = "A-share multi-factor quantitative trading MVP"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "pyarrow",
    "matplotlib",
    "pyyaml",
    "tqdm",
    "akshare",
    "tushare",
    "scipy",
]

[tool.setuptools.packages.find]
where = ["src"]
